# FMRadioStation-JP

./: .dockerignore  .gitignore  DockerFile  README.ja.md  README.md  docker-compose.yaml  pyproject.toml  radio_receiver.py  radio_scheduler.py  radio_scheduler_webui.py
.github/workflows/: ci.yml  docs.yml
asr_core/: README.md  __init__.py  config.py  file_transcribe.py  runner.py  segmenter.py  service.py  vad.py  wav_io.py
asr_core/asr/: __init__.py  backend.py  llama_mtmd.py  parakeet_cpp.py
config/: asr.yaml  tunnels.yaml  vad.yaml
docs/: design.md
docs/rest_api/: index.html  openapi.yaml
radio_core/: radiko.py  receivers.py  stations.py  transcoder.py
scripts/: convert_ja_gguf.sh  generate_api_docs.py  install_llama_cli.sh  install_models.sh  install_parakeet_cli.sh
src/fm_radio_station/: __init__.py  paths.py
src/fm_radio_station/apps/: __init__.py  receiver.py  scheduler.py  webui.py
src/fm_radio_station/asr_core/: README.md  __init__.py  config.py  file_transcribe.py  results.py  runner.py  segmenter.py  service.py  vad.py
src/fm_radio_station/asr_core/asr/: __init__.py  llama_mtmd.py  parakeet_cpp.py
src/fm_radio_station/radio_core/: radiko.py  receivers.py  stations.py  transcoder.py  utils.py
src/fm_radio_station/web/static/: player.js  script.js  styles.css
src/fm_radio_station/web/templates/: index.html  layout.html  on_air.html  programs.html  recorded.html  recording.html  reservations.html
static/: styles.css
templates/: index.html  layout.html  on_air.html  programs.html  recorded.html  recording.html  recordings.html  reservations.html
tests/: test_file_transcribe.py  test_llama_mtmd.py  test_on_air.py  test_parakeet_cpp.py  test_runner.py  test_segmenter.py  test_service.py  test_vad_segments.py  test_wav_io.py
