[project]
name = "radio-recorder"
version = "0.1.0"
description = "A script to schedule radio recordings using GNU Radio."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "xmltodict>=0.13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "numpy>=1.24,<2",
    "onnxruntime>=1.16",
    "pyyaml>=6",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["radio_core", "asr_core", "asr_core.asr"]
