[project]
name = "fm_radio_station"
version = "0.1.0"
description = "A script to schedule radio recordings using GNU Radio."
authors = [{name = "Jumpei Miyake", email = "jumpei.miyake@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "xmltodict>=0.13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "numpy>=1.24,<2",
    "onnxruntime>=1.16",
    "pyyaml>=6",
    "loguru>=0.7",
]

[project.scripts]
radio-receiver = "fm_radio_station.apps.receiver:main"
radio-scheduler = "fm_radio_station.apps.scheduler:main"
radio-webui = "fm_radio_station.apps.webui:main"

[tool.uv]
python-preference = "system"
python-downloads = "never"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fm_radio_station = ["web/templates/*.html", "web/static/*"]
